# sodium

./: CMakeLists.txt  README.md  package.json  tsconfig.json
native/: index.cpp
src/: index.ts
